--- a/StudyProject/Views/Tutor/ViewTest.cshtml
+++ b/StudyProject/Views/Tutor/ViewTest.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "ViewTest";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
- 
+
 
 }
 
@@ -35,6 +35,8 @@
                         <th>Варіантів відповідей</th>
                         <th>Перевірка задачі</th>
                         <th>Тип задачі</th>
+                        <th>Редагувати</th>
+                        <th>Видалити</th>
                     </tr>
                     @foreach (tbTask task in Model.tbTask)
                     {
@@ -47,11 +49,20 @@
                                 {
                                     <label>Ручна</label>
                                 }
-                                else { 
+                                else
+                                {
                                     <label>Автоматична</label>
                                 }
                             </td>
                             <td>@TaskStuff.getNameType((TaskStuff.TaskType)task.Type)</td>
+                            <td>
+                                <button type="button" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#editTask" onclick="setValueTask('@task.idTask')">
+                                    <i class="fas fa-edit fa-1x"></i>
+                                </button>
+                            </td>
+                            <td>
+                                <a href="@Url.Action("RemoveTask","Tutor", new { idTask = task.idTask })" class="btn btn-xs btn-danger"><i class="fa fa-trash"></i></a>
+                            </td>
                         </tr>
                     }
                 </table>
@@ -95,7 +106,7 @@
                         <div class="form-group">
                             <label class="control-label col-12">Тип задачі</label>
                             <div class="col-12">
-                                @Html.DropDownList("Type", null ,new { @class = "form-control"})
+                                @Html.DropDownList("Type", null, new { @class = "form-control" })
                             </div>
                         </div>
                         <div class="form-group">
@@ -108,7 +119,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <input type="hidden" name="idTest"  value="@Model.idTest" />
+                    <input type="hidden" name="idTest" value="@Model.idTest" />
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
                     <button type="submit" class="btn btn-primary">Зберегти</button>
                 </div>
@@ -117,3 +128,56 @@
     </div>
 }
 
+
+
+@using (Html.BeginForm("EditTask", "Tutor", FormMethod.Post))
+{
+    <div class="modal fade" id="editTask" tabindex="-1" role="dialog" aria-labelledby="title" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="title">Редагування завдання</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-12">Назва задачі</label>
+                            <div class="col-12">
+                                <input type="text" name="Name" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Постановка задачі</label>
+                            <div class="col-12">
+                                <input type="text" name="Description" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Оцінка</label>
+                            <div class="col-12">
+                                <input type="number" name="Rate" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <input type="hidden" name="idTest" value="@Model.idTest" />
+                    <input type="hidden" name="idTask" id="task" value="" />
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
+                    <button type="submit" class="btn btn-primary">Зберегти</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@section Scripts{
+    <script>
+        function setValueTask(id) {
+            $('#task').val(id);
+        }
+    </script>
+}
