--- a/StudyProject/Views/Shared/_Layout.cshtml
+++ b/StudyProject/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Styles.Render("~/Content/fontawesome")
     @RenderSection("scripts", required: false)
 </body>
 </html>
