--- a/StudyProject/Views/Tutor/TutorTests.cshtml
+++ b/StudyProject/Views/Tutor/TutorTests.cshtml
@@ -76,9 +76,21 @@
                 <div class="modal-body">
                     <div class="form-horizontal">
                         <div class="form-group">
-                            <label class="control-label col-md-2">Назва</label>
+                            <label class="control-label col-12">Назва</label>
                             <div class="col-12">
                                 <input type="text" name="Name" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Спроб на тест</label>
+                            <div class="col-12">
+                                <input type="number" name="Attempt" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Час на тест у хвилинах</label>
+                            <div class="col-12">
+                                <input type="number" name="TimeOnTest" class="form-control" value="20" title="Наприклад: 20" />
                             </div>
                         </div>
                     </div>
@@ -109,9 +121,21 @@
                 <div class="modal-body">
                     <div class="form-horizontal">
                         <div class="form-group">
-                            <label class="control-label col-md-2">Назва</label>
+                            <label class="control-label col-12">Назва</label>
                             <div class="col-12">
                                 <input type="text" name="Name" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Спроб на тест</label>
+                            <div class="col-12">
+                                <input type="number" name="Attempt" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-12">Час на тест у хвилинах</label>
+                            <div class="col-12">
+                                <input type="number" name="TimeOnTest" class="form-control" value="20" title="Наприклад: 20" />
                             </div>
                         </div>
                     </div>
