--- a/StudyProject/Views/Shared/_MainLayout.cshtml
+++ b/StudyProject/Views/Shared/_MainLayout.cshtml
@@ -1,5 +1,7 @@
 ﻿@using StudyProject;
 @using StudyProject.Models;
+@using StudyProject.Models.Core;
+
 @{
     UserInfo uInfo = new UserInfo(new StudyPlatformEntities());
 }
@@ -62,52 +64,57 @@
                 </div>
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
-                                <p>
-                                    Адмін
-                                    <i class="right fas fa-angle-left"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("UserManagement","Admin")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Управління</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("InstitutionManagement","Admin")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Начальні Заклади</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-tree"></i>
-                                <p>
-                                    Здобувач освіти
-                                    <i class="fas fa-angle-left right"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a href="pages/UI/general.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Тести</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/ribbons.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Матеріали</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
+                        @if (uInfo.fuser.Role == (int)UserRole.Admin)
+                        {
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <i class="nav-icon fas fa-chart-pie"></i>
+                                    <p>
+                                        Адмін
+                                        <i class="right fas fa-angle-left"></i>
+                                    </p>
+                                </a>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("UserManagement", "Admin")" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Управління</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("InstitutionManagement", "Admin")" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Начальні Заклади</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <i class="nav-icon fas fa-tree"></i>
+                                    <p>
+                                        Здобувач освіти
+                                        <i class="fas fa-angle-left right"></i>
+                                    </p>
+                                </a>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="pages/UI/general.html" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Тести</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="pages/UI/ribbons.html" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Матеріали</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        @if (uInfo.fuser.Role == (int)UserRole.Tutor || uInfo.fuser.Role == (int)UserRole.Admin)
+                        {
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
@@ -118,19 +125,20 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="@Url.Action("TutorInstitution","Tutor")" class="nav-link">
+                                    <a href="@Url.Action("TutorInstitution", "Tutor")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Матеріали та тести</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="@Url.Action("Groups","Tutor")" class="nav-link">
+                                    <a href="@Url.Action("Groups", "Tutor")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Групи</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
+                        }
                     </ul>
                 </nav>
             </div>
