--- a/StudyProject/Views/Home/TestResult.cshtml
+++ b/StudyProject/Views/Home/TestResult.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "TestResult";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
+    int sum = 0;
+    int count = 0;
+    count = Model.FirstOrDefault().FirstOrDefault().tbTest.tbTask.Count();
+    int? maxRate = Model.FirstOrDefault().FirstOrDefault().tbTest.tbTask.Sum(s => s.Rate)/count;
 }
 
 <h2 class="text-center">Результати тесту</h2>
@@ -9,11 +13,20 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                @foreach (var group in Model.OrderBy(O => O.Key))
+                @foreach (var group in Model.OrderByDescending(O => O.Key))
                 {
                     <h4 class="text-center">Дата проходження: @group.Key</h4>
                     foreach (tbTaskResult result in group.Select(s => s))
                     {
+                        if (result.Rate == null)
+                        {
+                            sum += 0;
+                        }
+                        else {
+                            sum += (int)result.Rate;
+                        }
+
+
                         <h5 class="mt-1">@result.tbTask.Description</h5>
                         if (result.Rate != null && result.Rate > 0)
                         {
@@ -27,9 +40,11 @@
                         {
                             <b style="color: orangered">Відповідь не вірна</b>
                         }
-                        <input type="text" value="Ваша Відповідь: @result.UserAnswer" class="form-control disabled" />
-                        <input type="text" value="Оцінка: @result.Rate" class="form-control disabled" />
+                        <input type="text" value="Ваша Відповідь: @result.UserAnswer" class="form-control" disabled/>
+                        <input type="text" value="Оцінка: @result.Rate" class="form-control" disabled/>
                     }
+                    <p class="text-center">Оцінка: @(sum/count)/@maxRate</p>
+                    sum = 0;
                 }
             </div>
         </div>
